; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_int.c_ecore_int_cau_conf_pi.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_int.c_ecore_int_cau_conf_pi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_hwfn = type { i32 }
%struct.ecore_ptt = type { i32 }
%struct.ecore_sb_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ecore_int_cau_conf_pi(%struct.ecore_hwfn* %0, %struct.ecore_ptt* %1, %struct.ecore_sb_info* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.ecore_hwfn*, align 8
  %8 = alloca %struct.ecore_ptt*, align 8
  %9 = alloca %struct.ecore_sb_info*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.ecore_hwfn* %0, %struct.ecore_hwfn** %7, align 8
  store %struct.ecore_ptt* %1, %struct.ecore_ptt** %8, align 8
  store %struct.ecore_sb_info* %2, %struct.ecore_sb_info** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %13 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %7, align 8
  %14 = load %struct.ecore_ptt*, %struct.ecore_ptt** %8, align 8
  %15 = load %struct.ecore_sb_info*, %struct.ecore_sb_info** %9, align 8
  %16 = getelementptr inbounds %struct.ecore_sb_info, %struct.ecore_sb_info* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %11, align 4
  %20 = load i32, i32* %12, align 4
  %21 = call i32 @_ecore_int_cau_conf_pi(%struct.ecore_hwfn* %13, %struct.ecore_ptt* %14, i32 %17, i32 %18, i32 %19, i32 %20)
  ret void
}

declare dso_local i32 @_ecore_int_cau_conf_pi(%struct.ecore_hwfn*, %struct.ecore_ptt*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
